# history

file/: CMakeLists.txt
file/seventh_gen/: CMakeLists.txt  easy_fridge_69_with_struct.c  readme.txt
file/seventh_gen/head/: barcode.c  barcode.h  data_handling.c  data_handling.h  database.txt  date_funcs.c  date_funcs.h  menu_opt.c  menu_opt.h  sort.c  sort.h  storage.txt  struct.h
file/tasks/: pass.c
